--- a/index.html
+++ b/index.html
@@ -1,1 +1,41 @@
-<h1>github page</h1>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <!-- 
+      This is an HTML comment
+      You can write text in a comment and the content won't be visible in the page
+    -->
+
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" href="https://glitch.com/favicon.ico" />
+    <link rel="stylesheet" href="/style.css/" />
+    <script
+      type="module"
+      src="https://ajax.googleapis.com/ajax/libs/model-viewer/4.0.0/model-viewer.min.js"
+    ></script>
+    <!--
+      This is the page head - it contains info the browser uses
+      Like the title, which appears on the browser tab but not inside the page
+      Further down you'll see the content that displays in the page
+    -->
+    <title>RA</title>
+
+    <!-- The website stylesheet -->
+    <link rel="canonical" href="https://glitch-hello-website.glitch.me/" />
+
+    <!-- The website JavaScript file -->
+    <script src="/script.js" defer></script>
+  </head>
+  <body>
+    <model-viewer
+      class= "viewer" src="https://cdn.glitch.global/b5171de7-ef34-4304-a50d-ecc2674db45d/untitled.glb?v=1743044470351
+      ar
+      environment-image="shared-assets/environments/moon_1k.hdr"
+      poster="shared-assets/models/NeilArmstrong.webp"
+      shadow-intensity="1"
+      camera-controls
+      touch-action="pan-y"
+    ></model-viewer>
+  </body>
+</html>
